# smart-tfrecord-writer

./: .gitignore  README.md  pyproject.toml  setup.py
examples/imagenet/: README.md  imagenet_to_tfrecord.py
examples/numpy/: README.md  numpy_to_tfrecord.py
examples/radioml/: README.md  radioml_to_tfrecord.py
examples/radioml/dest/dest/1.0.0/: dataset_info.json  features.json  label.labels.txt
smart_tfrecord_writer/: __init__.py  tfrecord_protos.py  utils.py  writer.py
